# Chinese-Chess

./: .gitignore  README.md
API/: Chinese-Chess.sln
API/Chinese-Chess/: Board.cpp  Board.h  Chess.cpp  Chess.h  ChessEnum.h  Chinese-Chess.vcxproj  Chinese-Chess.vcxproj.filters  ColorEnum.h  GameManager.cpp  GameManager.h  Position.cpp  Position.h  Record.cpp  Record.h  Viewer.cpp  Viewer.h  main.cpp  run.cpp
Chinese-Chess/: Chinese-Chess.sln
Chinese-Chess/Chinese-Chess/: Board.cpp  Board.h  CMakeLists.txt  Chess.cpp  Chess.h  ChessEnum.h  Chinese-Chess.cpp  Chinese-Chess.vcxproj  Chinese-Chess.vcxproj.filters  ColorEnum.h  GameManager.cpp  GameManager.h  Position.cpp  Position.h  Record.cpp  Record.h  Viewer.cpp  Viewer.h  main.cpp
Config/: beautiful.txt  black_win4.txt  pretty.txt  setFile.txt  status.txt  status2.txt  status_ai_cache.txt  status_不知道為什麼就贏了.txt  status１２３.txt  仕_move_issue.txt  卒_c8.txt  我只是亂點就結束了.txt  欠行.txt  窩操竟然可以吃紅兵.txt  紅方面將.txt  馬.txt
GUI/: .npmrc  package-lock.json  package.json  vue.config.js
GUI/.electron-vue/: build.js  webpack.main.config.js  webpack.renderer.config.js  webpack.web.config.js
GUI/src/: index.ejs
GUI/src/main/: index.js
GUI/src/renderer/: App.vue  main.js
GUI/src/renderer/components/: Game.vue  LandingPage.vue
GUI/src/renderer/router/: index.js
GUI/src/renderer/store/: game.js  global.js  index.js
gui-chinese-chess/: README.md  package-lock.json  package.json  run
gui-chinese-chess/src/main/: index.js
gui-chinese-chess/src/renderer/: App.vue  main.js
gui-chinese-chess/src/renderer/router/: index.js
(+23 files in other folders)
